# modelopt_ptq_transformers_doctor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bisect.py  contract.py  driver.py  envman.py  pyproject.toml  report.py  transformers_releases_v4.25.0_to_v5.12.1.json  versions.py
.claude/skills/cn_verify_testcase_runtime_reach/: SKILL.md
.claude/skills/compat-report/: SKILL.md
.claude/skills/verify_testcase_runtime_reach/: SKILL.md
.claude/skills/verify_testcase_runtime_reach_cn/: SKILL.md
.codex/skills/compat-report/: SKILL.md
.codex/skills/verify_testcase_runtime_reach/: SKILL.md
docs/superpowers/plans/: 2026-06-23-scan-progress-eta.md  2026-06-24-multi-target-compat.md  2026-06-24-signature-drift.md
report/: render_combined.py  render_compat.py
report/assets/: compat.css
report/modelopt044/: REPORT.md  compatibility.html  compatibility.ipynb  index.html  index.ipynb  matrix.json
report/modelopt046dev/: index.html  index.ipynb
src/modelopt_ptq_transformers_doctor/: __init__.py  allowlist.py  capabilities.py  cli.py  contract.py  driver.py  envman.py  model_coverage.py  models.py  prober.py  progress.py  relations.py  report.py  smoke.py  smoke_prober.py  targets.py  version_bisect.py  versions.py
tests/: test_bisect.py  test_capabilities.py  test_cli.py  test_contract.py  test_driver.py  test_envman.py  test_model_coverage.py  test_models.py  test_prober.py  test_progress.py  test_relations.py  test_render_combined.py  test_render_compat.py  test_report.py  test_smoke.py  test_targets.py  test_version_bisect.py  test_versions.py
(+35 files in other folders)
