[project]
name = "modelopt-ptq-transformers-doctor"
version = "0.4.0"
description = "Compatibility matrix between modelopt PTQ and transformers versions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "packaging>=21.0",
    "nvidia-modelopt @ git+https://github.com/NVIDIA/Model-Optimizer.git",
]

[project.scripts]
doctor = "modelopt_ptq_transformers_doctor.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
